BUG #15559

Fixed logic in handler to make handler now show up as enabled.